[project]
name = "langgraph-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "ddgs>=9.10.0",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "graphiti-core>=0.25.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.2",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.6",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-sqlite>=3.0.1",
    "pypdf>=6.5.0",
    "streamlit>=1.52.2",
]
